force-app/main/default/objects/Lead/fields/Annual_Shipments__c.field-meta.xml
<CustomField>
    <fullName>Annual_Shipments__c</fullName>
    <label>Annual Shipments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>