force-app/main/default/objects/Lead/fields/CloudingoAgent__AS__c.field-meta.xml
<CustomField>
    <fullName>CloudingoAgent__AS__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Address Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>