force-app/main/default/objects/Lead/fields/CloudingoAgent__AV__c.field-meta.xml
<CustomField>
    <fullName>CloudingoAgent__AV__c</fullName>
    <label>Address Vacancy</label>
    <length>1</length>
    <type>Text</type>
</CustomField>