force-app/main/default/objects/Lead/fields/Destinations__c.field-meta.xml
<CustomField>
    <fullName>Destinations__c</fullName>
    <label>Destinations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>