force-app/main/default/objects/Lead/fields/Is_Inactive_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Is_Inactive_Pincode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Becomes true if the pincode is inactive through LeadRoundRobin Class and fire an email to the owner through the process builder</description>
    <label>Is Inactive Pincode</label>
    <type>Checkbox</type>
</CustomField>