force-app/main/default/objects/Lead/fields/Lead_Created_From_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Lead_Created_From_Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Created From Ticket</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>