force-app/main/default/objects/Lead/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Domestic Valuables</fullName>
            </value>
            <value>
                <fullName>International Valuables</fullName>
            </value>
            <value>
                <fullName>Customs Brokerage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>