force-app/main/default/objects/Lead/fields/rsdoc__RS_Document_Error__c.field-meta.xml
<CustomField>
    <fullName>rsdoc__RS_Document_Error__c</fullName>
    <description>Error if document automation failed.</description>
    <inlineHelpText>Error if document automation failed.</inlineHelpText>
    <label>Document Error (DEPRECATED)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>