force-app/main/default/objects/Lead/recordTypes/BVC_Lead.recordType-meta.xml
<RecordType>
    <fullName>BVC_Lead</fullName>
    <active>true</active>
    <businessProcess>BVC Lead Process</businessProcess>
    <description>Record Type for BVC Brinks, BVC Clearance, BV Chinai and BVC Global</description>
    <label>BVC Lead</label>
</RecordType>