force-app/main/default/objects/Lead/recordTypes/Lead_Minimum_Fields.recordType-meta.xml
<RecordType>
    <fullName>Lead_Minimum_Fields</fullName>
    <active>true</active>
    <businessProcess>BVC Lead Process</businessProcess>
    <label>Lead Minimum Fields</label>
</RecordType>