force-app/main/default/objects/Lead/listViews/BVC_Web_to_Lead_Lead.listView-meta.xml
<ListView>
    <fullName>BVC_Web_to_Lead_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>BVC Web to Lead</label>
    <queue>BVC_Web_to_Lead</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>