force-app/main/default/objects/Lead/listViews/Inactive_Pincode_Leads.listView-meta.xml
<ListView>
    <fullName>Inactive_Pincode_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Inactive Pincode Leads</label>
    <queue>Unassigned_Leads</queue>
</ListView>