force-app/main/default/objects/Lead/listViews/Sales_Rep_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Sales_Rep_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Unassigned Leads</label>
    <queue>Unassigned_Leads</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>