force-app/main/default/objects/Lead/listViews/Unassigned_Leads_Lead.listView-meta.xml
<ListView>
    <fullName>Unassigned_Leads_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Unassigned Leads</label>
    <queue>Unassigned_Leads</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>